// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchModule should return a thunk 1`] = `[Function]`;

exports[`fetchModuleList should return a request action 1`] = `
Object {
  "meta": Object {
    "API_REQUEST": "FETCH_MODULE_LIST",
  },
  "payload": Object {
    "url": "test://MOCK_MOD_LIST_URL",
  },
  "type": "FETCH_MODULE_LIST",
}
`;

exports[`getLRUModule should return the LRU and non-timetable module 1`] = `"ACC1003"`;

exports[`removeLRUModule should return an action 1`] = `
Object {
  "payload": "ACC1001",
  "type": "REMOVE_LRU_MODULE",
}
`;

exports[`updateModuleTimestamp should return an action 1`] = `
Object {
  "payload": "ACC1001",
  "type": "UPDATE_MODULE_TIMESTAMP",
}
`;
